--- a/WebContent/createGroup.html
+++ b/WebContent/createGroup.html
@@ -10,11 +10,11 @@
 
 <body>
 <div class="container">
-<form class="form-signin" method="POST" action="http://localhost:8080/wps/v1/converterApp/currencyConverter/create_account">
+<form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/groups_v1">
   <h2 class="form-signin-heading">Create a group</h2>
-  <input class="form-control" type="text" required name="name" placeholder="name">
-   <input class="form-control" type="text" required name="description" placeholder="description">
-  <input class="form-control" type="text" required name="members" placeholder="enter some group members">
+  <input class="form-control" type="text" required name="email" placeholder="Admin's email">
+   <input class="form-control" type="text" required name="name" placeholder="group's name">
+  <input class="form-control" type="text" required name="description" placeholder="group's description">
   <label class="checkbox"></label>
   <button class="btn btn-lg btn-primary btn-block" type="submit">create the group</button>
 </form>
