--- a/WebContent/myGroups.html
+++ b/WebContent/myGroups.html
@@ -5,6 +5,25 @@
 <title>groups</title>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
+
+<script>
+function seeGroup(){
+	var email=document.getElementById('emailid').value;
+	$.getJSON('http://localhost:9090/pws/v1/manageApp/manage/showgroups, function(data) {
+	    var tbl_body = "";
+	    var odd_even = false;
+	    $.each(data, function() {
+	        var tbl_row = "";
+	        $.each(this, function(k , v) {
+	            tbl_row += "<td>"+v+"</td>";
+	        })
+	        tbl_body += "<tr class=\""+( odd_even ? "odd" : "even")+"\">"+tbl_row+"</tr>";
+	        odd_even = !odd_even;               
+	    })
+	    $("#target_table_id tbody").html(tbl_body);
+	});
+}
+</script>
 </head>
 
 <body>
@@ -12,15 +31,28 @@
 	<h1> Les groupes... </h1>
 </div>
 <div class="container">
+<form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/groups_v1">
+  <h2 class="form-signin-heading">Create a group</h2>
+  <input class="form-control" type="text" required name="email" placeholder="Admin's email">
+  <input class="form-control" type="text" required name="name" placeholder="group's name">
+  <input class="form-control" type="text" required name="description" placeholder="group's description">
+  <button class="btn btn-lg btn-primary btn-block" type="submit">create the group</button>
+</form>
+</div>
+
+<div class="container">
 	<form class="form-signin" method="POST" action="http://localhost:8080/wps/v1/converterApp/currencyConverter/groups_v2">
-		<h2 class="form-signin-heading">Change group's descritpion</h2>
+		<h2 class="form-signin-heading">Change group's description</h2>
+		<input class="form-control" type="text" required name="email" placeholder="email">
 		<input class="form-control" type="text" required name="name" placeholder="name of the group">
 		<input class="form-control" type="text" required name="description" placeholder="new description of this group">
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Validate</button>
 	</form>
+</div>
 <div class="container">
 	<form class="form-signin" method="POST" action="http://localhost:8080/wps/v1/converterApp/currencyConverter/delete_group">
 		<h2 class="form-signin-heading">Delete a group</h2>
+		  <input class="form-control" type="text" required name="email" placeholder="email">
 		<input class="form-control" type="text" required name="name" placeholder="name of the group">
 		<button class="btn btn-lg btn-primary btn-block" type="submit">delete the group</button>
 	</form>
