--- a/WebContent/profil.html
+++ b/WebContent/profil.html
@@ -5,17 +5,68 @@
 <title>Create your account</title>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/signin.css">
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+
+<script>
+	function userInfo(){
+		var email=document.getElementById('emailid').value;
+		$.getJSON('http://localhost:9090/pws/v1/manageApp/manage/userjson?email=' + email, function(data) {  
+			var nom='';
+			  var pn='';
+			  var mail='';
+			  var bio='';
+			  $.each(data, function() {
+				  mail=this.email;
+				  nom=this.lastname;
+				  pn=this.firstname;
+				  bio=this.biography;
+			  })
+			  
+			  $("#email_id").html(mail);
+			  $("#nom_id").html(nom);
+			  $("#prenom_id").html(pn);
+			  $("#biography_id").html(bio);
+		});
+	}
+	
+	function seeGroup(){
+		var email=document.getElementById('emailid').value;
+		$.getJSON('http://localhost:9090/pws/v1/manageApp/manage/groupsjson?email='+ email, function(data) {
+		    var tbl_body = "";
+		    var odd_even = false;
+		    $.each(data, function() {
+		        var tbl_row = "";
+		        $.each(this, function(k , v) {
+		            tbl_row += "<td>"+v+"</td>";
+		        })
+		        tbl_body += "<tr class=\""+( odd_even ? "odd" : "even")+"\">"+tbl_row+"</tr>";
+		        odd_even = !odd_even;               
+		    })
+		    $("#target_table_id tbody").html(tbl_body);
+		});
+	}
+	
+</script>
 </head>
 
 <body>
+
 <div class="container">
-	<h1>NOM</h1>
-	<h1>PRENOM</h1>
-	<h1>BIOGRAPHIE</h1>
+<form class="form-signin">
+<input class="form-control" id="emailid" type="text" required name="email" placeholder="email">
+<input type="button" onclick="userInfo();" value="nerd">
+</form>
 </div>
+
+<div id="email_id"></div>
+<div id="nom_id"></div>
+<div id="prenom_id"></div>
+<div id="biography_id"></div>
+
 <div class="container">
 <form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/users_v2">
   <h2 class="form-signin-heading">Changer son nom</h2>
+  <input class="form-control" type="text" required name="email" placeholder="email">
   <input class="form-control" type="text" required name="lastname" placeholder="New lastname">
   <label class="checkbox"></label>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
@@ -24,6 +75,7 @@
 <div class="container">
 <form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/users_v3">
   <h2 class="form-signin-heading">Changer son prénom</h2>
+  <input class="form-control" type="text" required name="email" placeholder="email">
   <input class="form-control" type="text" required name="firstname" placeholder="New firstname">
   <label class="checkbox"></label>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
@@ -31,16 +83,31 @@
 </div>
 <div class="container">
 <form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/users_v4">
-  <h2 class="form-signin-heading">Changer sa bigraphie</h2>
+  <h2 class="form-signin-heading">Changer sa bio graphie</h2>
+  <input class="form-control" type="text" required name="email" placeholder="email">
   <input class="form-control" type="text" required name="biography" placeholder="New biography">
   <label class="checkbox"></label>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
 </form>
 </div>
 <div class="container">
-<form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/delete_account">
+<form class="form-signin" method="POST" action="http://localhost:9090/pws/v1/manageApp/manage/user_dma">
   <h2 class="form-signin-heading">Delete the account</h2>
+  <input class="form-control" type="text" required name="email" placeholder="email">
   <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+</form>
+</div>
+<br>
+<div class="container">
+<h2 class="form-signin-heading">See groups</h2>
+<form method="POST" action="myGroups.html">
+	<input type="submit" value="goooooo!" >
+</form>
+</div>
+<div class="container">
+<form class="form-signin">
+<input class="form-control" id="emailid2" type="text" required name="email" placeholder="email">
+<input type="button" onclick="seeGroups();" value="ok!">
 </form>
 </div>
 </body>
