--- a/WebContent/profil.html
+++ b/WebContent/profil.html
@@ -50,7 +50,8 @@
 </head>
 
 <body>
-
+<h1> PROFIL </h1>
+<BR/>
 <div class="container">
 <form class="form-signin">
 <input class="form-control" id="emailid" type="text" required name="email" placeholder="email">
@@ -99,15 +100,15 @@
 </div>
 <br>
 <div class="container">
-<h2 class="form-signin-heading">See groups</h2>
+<h2 class="form-signin-heading">See my groups</h2>
 <form method="POST" action="myGroups.html">
 	<input type="submit" value="goooooo!" >
 </form>
 </div>
 <div class="container">
-<form class="form-signin">
-<input class="form-control" id="emailid2" type="text" required name="email" placeholder="email">
-<input type="button" onclick="seeGroups();" value="ok!">
+<h2 class="form-signin-heading">See all groups</h2>
+<form method="POST" action="groups.html">
+	<input type="submit" value="goooooo!" >
 </form>
 </div>
 </body>
